# auth-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
docs/: auth-service-openapi.json  auth-service-openapi.yml
migrations/: env.py
migrations/versions/: 01fb4c7a5ce7_добавить_unique_index_для_tg_id.py  4805d6bddab9_добавить_таблицу_users.py  6552ee056183_init.py  8a979ef28175_внести_фиксы_в_таблицу_tokens.py  f4d6850a42e1_добавить_таблицу_tokens.py  f9d2dca12b0b_init_migration.py
src/api/: error_handlers.py  exception_handlers.py
src/api/error/: handlers.py
src/api/errors/: handlers.py
src/api/routers/: __init__.py  auth.py  login.py  token.py
src/api/routers/v1/: __init__.py  auth.py  token.py
src/api/schemas/: requests.py  responses.py
src/app/: config.py  identity_providers.py  main.py
src/domain/: exceptions.py
src/domain/models/: auth.py  login.py  telegram.py  token.py  user.py
src/domain/providers/: auth_provider.py  telegram_auth_provider.py
src/domain/use_cases/: auth_use_case.py  login_use_case.py  token_use_case.py
src/ioc/: __init__.py  database.py  repository.py  use_case.py
src/storage/database/: database.py
src/storage/database/models/: token.py  user.py  user_identity.py
src/storage/database/repository/: token_repository.py  user_repository.py
src/storage/postgres/: database.py
src/storage/postgres/models/: __init__.py  token.py  user.py  user_identity.py
src/storage/postgres/repository/: token_repository.py  user_repository.py
src/utils/: docs_gen.py
tests/integrations/repository/: test_token_repository.py  test_user_repository.py
